feat: 登录后推荐歌单

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -113,6 +113,11 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "vite.config.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "vite.config.ts",
+    "node_modules/vite-plugin-svgr/client.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
