--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.5.0",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-svgr": "^4.1.0"
   }
 }
