--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/api": "^1.5.0",
     "antd": "^5.10.3",
     "axios": "^1.6.0",
+    "howler": "^2.2.4",
     "nprogress": "^0.2.0",
     "overlayscrollbars": "^2.4.3",
     "qrcode": "^1.5.3",
@@ -27,16 +28,19 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "swiper": "^11.0.3",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1"
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
+    "@types/howler": "^2.2.11",
     "@types/node": "^20.8.9",
     "@types/nprogress": "^0.2.2",
     "@types/qrcode": "^1.5.4",
     "@types/qs": "^6.9.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/throttle-debounce": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
