feat: 大改核心播放逻辑

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,16 @@
     "Coverflow",
     "iconfont",
     "navlink",
+    "nexttrack",
     "onloaderror",
     "overlayscrollbars",
     "playcount",
+    "previoustrack",
     "qrcode",
     "qrimg",
     "qrurl",
     "reduxjs",
+    "seekto",
     "Sider",
     "Swiper",
     "tauri",
