--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "swiper": "^11.0.3",
