--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "swiper": "^11.0.3",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
-    "throttle-debounce": "^5.0.0"
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
@@ -42,7 +40,6 @@
     "@types/qs": "^6.9.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@types/throttle-debounce": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
