feat: 音乐详情歌词实现

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "reduxjs",
     "seekto",
     "Sider",
+    "Singal",
     "Swiper",
     "tailwindcss",
     "tauri",
@@ -22,5 +23,7 @@
     "unikey",
     "unlisten",
     "unminimize"
-  ]
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
