--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lrc": "^3.0.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-window": "^1.8.9",
@@ -55,6 +56,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
+    "typescript-plugin-css-modules": "^5.0.2",
     "vite": "^4.5.0",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-svgr": "^4.1.0"
