--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,7 +111,8 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "include": [
     "src/types/*.d.ts",
