--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,21 @@
 {
   "cSpell.words": [
+    "AGNET",
     "alia",
     "antd",
+    "Beatport",
     "Coverflow",
+    "EAPIKEY",
+    "eparams",
+    "Hito",
     "iconfont",
+    "KHTML",
+    "linuxapi",
+    "Mnet",
     "navlink",
     "nexttrack",
     "onloaderror",
+    "Oricon",
     "overlayscrollbars",
     "playcount",
     "previoustrack",
@@ -14,16 +23,23 @@
     "qrimg",
     "qrurl",
     "reduxjs",
+    "REFERER",
+    "reqwest",
+    "rngs",
     "seekto",
     "Sider",
     "Singal",
     "Swiper",
+    "symm",
     "tailwindcss",
     "tauri",
     "toplist",
     "unikey",
     "unlisten",
-    "unminimize"
+    "unminimize",
+    "urlqstring",
+    "VOCALOID",
+    "weapi"
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true
