feat: 详情页基本实现

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,6 @@
     "@typescript-eslint/no-misused-promises": "off",
     "no-async-promise-executor": "off",
     "prefer-promise-reject-errors": "off",
-    "react/prop-types": "off",
-    "@typescript-eslint/no-throw-literal": "off"
+    "react/prop-types": "off"
   }
 }
