--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-lrc": "^3.0.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "swiper": "^11.0.3",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1"
   },
