--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "howler": "^2.2.4",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
-    "overlayscrollbars": "^2.4.3",
     "qrcode": "^1.5.3",
     "qs": "^6.11.2",
     "react": "^18.2.0",
@@ -31,9 +30,9 @@
     "react-router-dom": "^6.17.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9",
-    "react-window-infinite-loader": "^1.0.9",
     "swiper": "^11.0.3",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1"
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
@@ -45,6 +44,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-window": "^1.8.8",
+    "@types/throttle-debounce": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
