feat: 实现自定义歌曲Jay获取与播放(详情页todo)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,7 +41,8 @@
     "unminimize",
     "urlqstring",
     "VOCALOID",
-    "weapi"
+    "weapi",
+    "Zhou"
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true
