--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys": "^2.0.0",
     "react-lrc": "^3.0.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
