--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "axios": "^1.6.0",
     "howler": "^2.2.4",
     "mitt": "^3.0.1",
-    "nprogress": "^0.2.0",
     "qrcode": "^1.5.3",
     "qs": "^6.11.2",
     "react": "^18.2.0",
@@ -38,7 +37,6 @@
     "@tauri-apps/cli": "^1.5.0",
     "@types/howler": "^2.2.11",
     "@types/node": "^20.8.9",
-    "@types/nprogress": "^0.2.2",
     "@types/qrcode": "^1.5.4",
     "@types/qs": "^6.9.9",
     "@types/react": "^18.2.15",
@@ -61,6 +59,7 @@
     "typescript-plugin-css-modules": "^5.0.2",
     "vite": "^4.5.0",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-svgr": "^4.1.0"
   }
 }
