fix: v0.0.4-alpha:优化解决howl与url问题

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i-music-player",
-  "version": "0.0.4",
+  "version": "0.0.4-alpha",
   "license": "MIT",
   "type": "module",
   "scripts": {
