--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "i-music-player"
-version = "0.0.4-alpha"
+version = "0.0.5"
 description = "i-music-player"
 authors = ["you"]
 license = "mit"
