--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.10.3",
     "axios": "^1.6.0",
     "howler": "^2.2.4",
+    "localforage": "^1.10.0",
     "mitt": "^3.0.1",
     "qrcode": "^1.5.3",
     "qs": "^6.11.2",
@@ -30,8 +31,7 @@
     "react-router-dom": "^6.17.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9",
-    "swiper": "^11.0.3",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1"
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.33.2",
     "less": "^4.2.0",
     "postcss": "^8.4.31",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "typescript-plugin-css-modules": "^5.0.2",
