feat: redux -> jotai

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.10.3",
     "axios": "^1.6.0",
     "howler": "^2.2.4",
+    "jotai": "^2.9.0",
     "localforage": "^1.10.0",
     "mitt": "^3.0.1",
     "qrcode": "^1.5.3",
