--- a/tsconfig.json
+++ b/tsconfig.json
@@ -120,5 +120,6 @@
     "src/**/*.tsx",
     "vite.config.ts"
   ],
+  "exclude": ["**/node_modules/**", "**/dist/**"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
