--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/no-misused-promises": "off",
     "no-async-promise-executor": "off",
     "prefer-promise-reject-errors": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "strict-boolean-expressions": "off"
   }
 }
