--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tauri-apps/api": "^1.5.0",
     "antd": "^5.10.3",
     "axios": "^1.6.0",
+    "classnames": "^2.5.1",
     "howler": "^2.2.4",
     "jotai": "^2.9.0",
     "localforage": "^1.10.0",
