--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-window": "^1.8.8",
     "@types/throttle-debounce": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "less": "^4.2.0",
     "postcss": "^8.4.31",
@@ -58,8 +58,8 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "typescript-plugin-css-modules": "^5.0.2",
-    "vite": "^4.5.0",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-svgr": "^4.1.0"
+    "vite": "^5.3.5",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
