--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ hex = "0.4"
 regex = "1.10"
 qrcode = { version = "0.12.0", default-features = false }
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+time = "0.3.36"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
